--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GOOGLE_API_KEY=AIzaSyBEMA-ra1y-OE_TcO-EseOCqMmhnFAaSs0
-LIVEKIT_API_KEY=APIixihuXBp2bzi
-LIVEKIT_API_SECRET=zQoVnFAL8NhJls0t1pd8xuCfyblintHNmEvq5kjMxez
-LIVEKIT_URL=wss://myai-xwyozwps.livekit.cloud
+GOOGLE_API_KEY=
+LIVEKIT_API_KEY=
+LIVEKIT_API_SECRET=
+LIVEKIT_URL=wss
